# unimrcp

./: CMakeLists.txt  configure.ac
libs/mrcp-mediatel/: CMakeLists.txt  Makefile.am
libs/mrcp-mediatel/include/: mrcp_mediatel.h
libs/mrcp-mediatel/src/: apt_mediatel.cpp  mrcp_mediatel.cpp
tests/: Makefile.am
tests/mrcp-mediatel/: CMakeLists.txt  Makefile.am
tests/mrcp-mediatel/include/: mrcp_mediatel.h
tests/mrcp-mediatel/src/: main.cpp  mrcp_mediatel.cpp
tests/mrcp-mediatel/v2/: definegrammar.msg.hdr_space  getparams.msg.hdr_space  recognitioncomplete.msg.hdr_space  recognize.msg.hdr_space  recognize_resp.msg  recognize_resp.msg.hdr_space  setparams.msg.hdr_space  speak.msg.hdr_space  speak_resp.msg  speak_resp.msg.hdr_space  speakcomplete.msg.hdr_space  stop.msg.hdr_space
